# nusy-kanban-server

./: Cargo.toml  README.md
scripts/: com.nusy.kanban-backup.plist
src/: events.rs  lib.rs  main.rs  state.rs
src/handlers/: core.rs  mod.rs  pr.rs  relations.rs  research.rs  source.rs
