[package]
name = "nusy-kanban-server"
description = "NATS server + client bridge for the Arrow-native kanban engine"
version = "0.15.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/hankh95/nusy-kanban-server"
homepage = "https://nusy.dev"

[[bin]]
name = "nusy-kanban-server"
path = "src/main.rs"

[features]
default = []
pr = ["dep:nusy-graph-review"]
research = []
git = []

[dependencies]
nusy-kanban = "0.15.2"
nusy-graph-review = { version = "0.14.2", optional = true }
noesis-ship = "0.14.2"
arrow = { version = "57", features = ["prettyprint"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
